# BobaOS

./: .gitignore  .gitnore  CMakeLists.txt  Makefile  README.md  boot.sh  build.sh  checkAlignment.sh  compile_commands.json  create_compileJson.sh  debug.sh  gitignore  setup.sh
.github/workflows/: docker-image.yml
assets/: test.txt
container/Base/: Dockerfile_base  build_gcccc.sh
container/Develop/: Dockerfile_dev  entrypoint.sh  run_command.sh
doc/: Keyboard_access.md  README.md  paging.md  virtualKeyboardLayer.md
doc/Processes_and_Tasks/: elf.md  processesTasks.md
doc/STCQ/: A20_Line.md  GDT.md  HardwareInterrupts.md  IDT.md  TSS.md
doc/assemblyAndC/: compileAssembly.md  compileC.md  crosscompiler.md  linkKernel.md
doc/assembly_modes/: protected_mode.md  real_mode.md
doc/boot/: Boot.md  HardwareInterrupts.md  Loader.md
doc/driver/: disk_ata_pio.md  keyboard_ps2.md
doc/fs/: Fat.md  vfs.md
doc/kernel/: kernel.asm.md
doc/keyboard/: Keyboard_access.md  virtualKeyboardLayer.md
doc/memoryManagement/: Heap.md  heap.md  paging.md  paging_old.md
doc/userland/: Userland.md  linking_stdlib.md  process_kernel_talk.md  stdlib.md
doc/x86Assembly/: BIOS_Boot.md  instruction_set.md  sections.md
programs/empty/: Makefile  README.md  build.sh
programs/empty/src/: empty.c  empty_linker.ld
script/: addAssetsToOsFilesystem.sh  addFat32Tables.sh  copyProgramsToOs.sh  debug.gdb  startDebuggingServer.sh
script/linux/: addFat32Tables.sh  debug.sh
script/macos/: addAssetsToOsFilesystem.sh  addFat32Tables.sh  boot.sh
src/: kernel_link.ld
src/boot/: boot.asm  fat32Header.asm  fsinfo.asm  stage2.asm
src/boot/x86_64/BIOS/: boot.asm
src/kernel/: config.h  kernel.asm  kernel.c  kernel.h  macros.h  print.c  print.h  status.h  terminal.c  terminal.h  version.h
src/kernel/disk/: disk.c  disk.h  diskDriver.c  diskDriver.h  partitionStream.c  partitionStream.h  stream.c  stream.h
src/kernel/disk/driver/: ahci.c  ahci.h  ataPio.c  ataPio.h
src/kernel/gdt/: gdt.asm  gdt.c  gdt.h
src/kernel/hardware/pci/: pci.c  pci.h
src/kernel/idt/: exceptionHandler.c  exceptionHandler.h  idt.asm  idt.c  idt.h  irqHandler.c  irqHandler.h
src/kernel/io/: io.asm  io.h
src/kernel/koal/: koal.c  koal.h
src/kernel/memory/: memory.c  memory.h  mmioEngine.c  mmioEngine.h
src/kernel/memory/kheap/: kheap.c  kheap.h  kheap_buddy.c  kheap_buddy.h  kheap_page.c  kheap_page.h
src/kernel/memory/paging/: paging.asm  paging.c  paging.h
src/kernel/powerManagement/: acpi.c  acpi.h
src/kernel/string/: string.c  string.h
src/kernel/task/: process.c  process.h  scheduler.c  scheduler.h  task.c  task.h  tss.asm  tss.c  tss.h
src/kernel/vfsl/: pathTracer.c  pathTracer.h  virtualFilesystemLayer.c  virtualFilesystemLayer.h
src/kernel/vfsl/driver/: fat32.c  fat32.h
